# ytmusicapi

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .style.yapf  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  DEVELOPMENT.md  LICENSE  MANIFEST.in  Makefile  OAUTH_ENHANCEMENT_README.md  PR_SUMMARY.md  README.md  README.rst  SECURITY.md  codecov.yml  demo_oauth_enhancement.py  headers_auth.json.example  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: coverage-pr.yml  coverage.yml  docsbuild.yml  lint.yml  pdm.yml  pythonpublish.yml
docs/: Makefile  make.bat
docs/source/: conf.py  faq.rst  index.rst  reference.rst  requirements.txt  setup.rst  usage.rst
docs/source/_static/: style.css
docs/source/_static/css/: custom.css
docs/source/_templates/: layout.html
docs/source/reference/: browsing.rst  explore.rst  index.rst  library.rst  oauth.rst  playlists.rst  podcasts.rst  profiles.rst  search.rst  setup.rst  uploads.rst  watch.rst  ytmusic.rst
docs/source/setup/: browser.rst  headers_auth.json.example  index.rst  oauth.rst
scripts/: check_dev_env.py
tests/: README.rst  conftest.py  fixtures.py  quotas.py  setup_account.py  test.cfg.example  test.example.cfg  test.py  test_helpers.py  test_ytmusic.py
tests/auth/: test_browser.py  test_oauth.py
tests/data/: 2024_03_get_album.json  2024_03_get_playlist.json  2024_03_get_playlist_private.json  2024_03_get_playlist_public.json  2024_07_get_playlist_collaborative.json  2024_12_get_playlist_audio.json  2025_01_get_playlist_chart.json  2025_10_get_playlist_collaborative.json  2025_11_get_explore.json  2025_12_get_playlist_audio.json  2026_04_get_album.json  2026_04_get_artist1.json  2026_04_get_artist2.json  raw_chrome_headers.txt  raw_firefox_headers.txt
tests/data/expected_output/: 2024_03_get_playlist.json  2024_03_get_playlist_public.json  2024_07_get_playlist_collaborative.json  2025_01_get_playlist_chart.json  2025_10_get_playlist_collaborative.json  2025_11_get_explore.json  2025_12_get_playlist_audio.json  2026_04_get_album.json  2026_04_get_artist1.json  2026_04_get_artist2.json
tests/mixins/: test_browsing.py  test_charts.py  test_explore.py  test_library.py  test_playlists.py  test_podcasts.py  test_profiles.py  test_search.py  test_uploads.py  test_watch.py
tests/setup/: setup_account.py
ytmusicapi/: __init__.py  async_ytmusic.py  config.py  constants.py  context.json  continuations.py  enums.py  exceptions.py  headers.json  helpers.py  logging_utils.py  navigation.py  parsers.py  setup.py  test.py  type_alias.py  validation.py  ytmusic.py
ytmusicapi/async_mixins/: _protocol.py  browsing.py  charts.py  explore.py  library.py  playlists.py  podcasts.py  search.py  uploads.py  watch.py
ytmusicapi/auth/: auth_parse.py  browser.py  headers.py  oauth.py  types.py
ytmusicapi/auth/oauth/: __init__.py  base.py  credentials.py  exceptions.py  models.py  refreshing.py  token.py
ytmusicapi/locales/: README.rst  base.pot  update_mo.sh  update_po.sh
ytmusicapi/locales/ar/LC_MESSAGES/: base.mo  base.po
ytmusicapi/locales/cs/LC_MESSAGES/: base.mo  base.po
ytmusicapi/locales/cz/LC_MESSAGES/: base.po
ytmusicapi/locales/de/LC_MESSAGES/: base.mo  base.po
ytmusicapi/locales/en/LC_MESSAGES/: base.mo  base.po
ytmusicapi/locales/es/LC_MESSAGES/: base.mo  base.po
ytmusicapi/locales/fr/LC_MESSAGES/: base.mo  base.po
ytmusicapi/locales/hi/LC_MESSAGES/: base.mo  base.po
ytmusicapi/locales/it/LC_MESSAGES/: base.mo  base.po
ytmusicapi/locales/ja/LC_MESSAGES/: base.mo  base.po
ytmusicapi/locales/ko/LC_MESSAGES/: base.mo  base.po
ytmusicapi/locales/nl/LC_MESSAGES/: base.mo  base.po
ytmusicapi/locales/pt/LC_MESSAGES/: base.mo  base.po
ytmusicapi/locales/ru/LC_MESSAGES/: base.mo  base.po
ytmusicapi/locales/tr/LC_MESSAGES/: base.mo  base.po
ytmusicapi/locales/ur/LC_MESSAGES/: base.mo  base.po
ytmusicapi/locales/zh_CN/LC_MESSAGES/: base.mo  base.po  base.pot
ytmusicapi/locales/zh_TW/LC_MESSAGES/: base.mo  base.po
ytmusicapi/mixins/: _protocol.py  _utils.py  browsing.py  charts.py  explore.py  library.py  playlists.py  podcasts.py  profiles.py  search.py  uploads.py  watch.py
ytmusicapi/mixins/raise_utils/: __init__.py  _browse_exception.py  _filter_exception.py  _scope_exception.py  _support_exception.py
ytmusicapi/models/: __init__.py  lyrics.py  playlist.py  search.py  thumbnail.py
ytmusicapi/models/content/: TextRun.py  enums.py  generic.py
ytmusicapi/parsers/: __init__.py  _utils.py  albums.py  artists.py  browsing.py  constants.py  explore.py  i18n.py  ios_explore.py  library.py  playlists.py  podcasts.py  podcasts.py.bak  search.py  search_params.py  songs.py  uploads.py  utils.py  watch.py
