[project]
name = "ytmusicapi"
description = "Unofficial API for YouTube Music"
requires-python = ">=3.8"
authors=[{name = "sigma67", email= "ytmusicapi@gmail.com"}]
license={file="LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "requests >= 2.22",
]
dynamic = ["version", "readme"]

[project.scripts]
ytmusicapi = "ytmusicapi.setup:main"

[project.urls]
homepage = "https://github.com/sigma67/ytmusicapi"
documentation = "https://ytmusicapi.readthedocs.io"
repository = "https://github.com/sigma67/ytmusicapi"

[build-system]
requires = ["setuptools>=65", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
readme = {file = ["README.rst"]}

[tool.setuptools_scm]

[tool.setuptools]
include-package-data=false

[tool.setuptools.package-data]
"*" = ["**.rst", "**.py", "**.mo"]

###############
# DEVELOPMENT #
###############

[tool.pytest.ini_options]
python_functions = "test_*"
testpaths = ["tests"]
addopts = "--verbose --cov"

[tool.coverage.run]
source = ["ytmusicapi"]

[tool.coverage.report]
precision = 2

[tool.ruff]
line-length = 110
ignore = [ "F403", "F405", "F821", "E731" ]
extend-select = [
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff
]

[tool.mypy]
files = [
    "ytmusicapi/"
]
mypy_path = "ytmusicapi"

[tool.pdm.dev-dependencies]
dev = [
    "coverage>=7.4.0",
    'sphinx<7',
    'sphinx-rtd-theme',
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
]
