[project]
name = "ytmusicapi"
description = "Unofficial API for YouTube Music"
requires-python = ">=3.10"
authors=[{name = "sigma67", email= "ytmusicapi@gmail.com"}]
license={file="LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "requests >= 2.22",
]
dynamic = ["version", "readme"]

[project.scripts]
ytmusicapi = "ytmusicapi.setup:main"

[project.urls]
homepage = "https://github.com/sigma67/ytmusicapi"
documentation = "https://ytmusicapi.readthedocs.io"
repository = "https://github.com/sigma67/ytmusicapi"

[build-system]
requires = ["setuptools>=65", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
readme = {file = ["README.rst"]}

[tool.setuptools_scm]

[tool.setuptools]
include-package-data=false

[tool.setuptools.package-data]
"*" = ["**.rst", "**.py", "**.mo"]

###############
# DEVELOPMENT #
###############

[tool.pytest.ini_options]
python_functions = "test_*"
testpaths = ["tests"]
addopts = "--verbose --cov --junitxml=junit.xml --retries 2 --retry-delay 5"

[tool.coverage.run]
source = ["ytmusicapi"]

[tool.coverage.report]
precision = 2

[tool.ruff]
line-length = 110
include = ["ytmusicapi/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
ignore = [ "F403", "F405", "F821", "E731", "PTH123" ]
extend-select = [
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff
    "PTH", # pathlib
    "INP", # implicit namespace package
]

[tool.mypy]
files = [
    "ytmusicapi/"
]
mypy_path = "ytmusicapi"
strict = true

[dependency-groups]
dev = [
    "coverage>=7.4.0",
    'sphinx<7',
    'sphinx-rtd-theme',
    "ruff>=0.9.0",
    "mypy>=1.15.0",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "types-requests>=2.31.0.20240218",
    "pytest-retry>=1.6.3",
    "sphinx-autodoc-typehints>=1.23.0",
]
